# ROS

install/: local_setup.sh  setup.sh
install/gazebo_ros2_control/include/gazebo_ros2_control/launch/: update_manager_rate.launch.py
install/gazebo_ros2_control/share/gazebo_ros2_control/: gazebo_hardware_plugins.xml  local_setup.sh  package.sh
install/robot_5a_moveit_config/share/robot_5a_moveit_config/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/robot_5a_moveit_config/share/robot_5a_moveit_config/cmake/: robot_5a_moveit_configConfig.cmake
install/robot_5a_urdf/share/robot_5a_urdf/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh  view_robot.rviz
install/robot_5a_urdf/share/robot_5a_urdf/config/: joint_names_5A Assembly3.yaml  robot_5a_controllers.yaml
install/robot_5a_urdf/share/robot_5a_urdf/description/: example_gazebo.xacro  robot_5a_urdf.urdf.xacro  robot_5a_urdf.xacro  robot_5a_urdf.xacro.urdf
install/robot_5a_urdf/share/robot_5a_urdf/launch/: gazebo.launch  gazebo.launch.py  gazebo.launch.xml  gazebo_launch.py  gazebo_robot.launch.py  main_robot.launch.py  rsp_sim.launch.py
install/robot_5a_urdf/share/robot_5a_urdf/meshes/: Link_1.STL  Link_2.STL  Link_4.STL  Link_5.STL
install/robot_5a_urdf/share/robot_5a_urdf/rviz/: view_robot.rviz
install/robot_5a_urdf/share/robot_5a_urdf/urdf/: robot_5a_urdf.xacro.urdf
log/: latest_build
src/gazebo_ros2_control/: CMakeLists.txt
src/gazebo_ros2_control/src/: gazebo_ros2_control_plugin.cpp
src/moveit_configs/: .setup_assistant  CMakeLists.txt  package.xml
src/moveit_configs/config/: initial_positions.yaml  kinematics.yaml  moveit_controllers.yaml  robot_5a_urdf.ros2_control.xacro  robot_5a_urdf.srdf  robot_5a_urdf.urdf.xacro  ros2_controllers.yaml
src/moveit_configs/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
src/robot_5a_moveit_config/: CMakeLists.txt  package.xml
src/robot_5a_urdf/: CMakeLists.txt  README.md  package.xml
src/robot_5a_urdf/config/: robot_5a_arms_controller.yaml  robot_5a_controllers.yaml
src/robot_5a_urdf/description/: example_gazebo.xacro  gazebo_plugins.xacro  physics_include.xacro  robot_5a_moveoBCN3D.urdf  robot_5a_urdf.csv  robot_5a_urdf.urdf.xacro  simulation_gazebo.xacro
src/robot_5a_urdf/launch/: display.launch.py  gazebo.launch  gazebo.launch.py  gazebo_robot.launch.py  rsp_sim.launch.py  rviz.launch.py
src/robot_5a_urdf/meshes/: Link_3.STL  base_link.STL
src/robot_5a_urdf/rviz/: view_robot.rviz
src/robot_5a_urdf/urdf/: robot_5a_urdf.xacro.urdf
src/robot_5a_urdf/versining/: gazebo.launch.xml
src/robot_5a_urdf/versioning/: robot_5a_urdf.xacro.urdf
src/robot_5a_urdf/versioning/launch/: display.launch.py  rsp.launch.py  rsp_gz_rviz_pub.launch.py  rviz.launch.py
