<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_5a_urdf</name>
  <version>0.0.0</version>
  <description>
    <p>URDF Description package for 5A Assembly3</p>
    <p>This package contains configuration data, 3D models and launch files
for 5A Assembly3 robot</p>
  </description>
  <maintainer email="TODO@email.com" />
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>roslaunch</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo</exec_depend>
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path = "/home/bernardo/R5A_ROS_ws/install/robot_5a_urdf/share/"/>
  </export>
</package>