<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_5a_urdf</name>
  <version>0.0.0</version>
  <description>
    <p>URDF Description package for 5A Assembly3</p>
    <p>This package contains configuration data, 3D models and launch files
for 5A Assembly3 robot</p>
  </description>
  <maintainer email="TODO@email.com" />
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

<!--  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>-->
 
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>